Fix issue with not enought permgen in sanity